@@ -16,6 +16,7 @@
   * Nokogiri::HTML::NamedCharacters delegates to libxml2
   * Nokogiri::XML::Node#[] can take a symbol (LH #48)
   * vasprintf for windows updated.  Thanks Geoffroy Couprie!
+  * Nokogiri::XML::Node#[]= should not encode entities (LH #55)
 
 === 1.2.1 / 2008-02-23
 
